--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,24 @@ plugins {
     id 'com.android.library' version '7.1.2' apply false
 }
 
+//buildscript {
+//    repositories {
+//        jcenter()
+//    }
+//    dependencies {
+//        classpath 'com.android.tools.build:gradle:1.2.3'
+//
+//        // NOTE: Do not place your application dependencies here; they belong
+//        // in the individual module build.gradle files
+//    }
+//}
+//
+//allprojects {
+//    repositories {
+//        jcenter()
+//    }
+//}
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
